# compressO

./: .eslintrc.json  .gitignore  .prettierrc  CHANGELOG.md  README.md  biome.jsonc  index.html  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.husky/: pre-commit
public/scripts/: accessibility-only-when-focused.js  disable-context-menu.js  disable-reload.js  disable-zoom.js
src/: global.css  main.tsx  routeTree.gen.ts  vite.env.d.ts
src-tauri/: Cargo.toml  compressO-sky.mov  tauri.conf.json
src-tauri/_icons/: icon.icns
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/libs/: ffmpeg.rs  filesystem.rs  mod.rs
src-tauri/src/: main.rs
src-tauri/src/lib/: domain.rs  ffmpeg.rs  filesystem.rs  fs.rs  mod.rs
src-tauri/src/lib/sys/: gpu.rs
src-tauri/src/lib/tauri_commands/: command.rs  ffmpeg.rs  fs.rs  mod.rs
src-tauri/src/libs/: filesystem.rs
src/app/: globals.css  head.tsx  layout.tsx  page.tsx
src/app/(root)/: About.tsx  Dialog.tsx  DragAndDropOverlay.tsx  Setting.tsx  page.tsx  state.ts  types.ts
src/app/(root)/ui/: About.tsx  CancelCompression.tsx  Compressing.tsx  CompressionQuality.tsx  DragAndDrop.tsx  (+5 more)
src/assets/fonts/: index.ts
src/components/Button/: index.tsx
src/components/Checkbox/: index.tsx
src/components/Code/: index.tsx
src/components/Divider/: index.tsx
src/components/Drawer/: index.tsx
src/components/Dropdown/: index.tsx
src/components/ErrorBoundary/: index.tsx
src/components/Icon/: index.tsx  registry.ts
src/components/IconButton/: index.tsx
src/components/Image/: index.tsx
src/components/Layout/: Footer.tsx  Header.tsx  context.ts  index.tsx
src/components/Link/: index.tsx
src/components/Modal/: README.md  index.tsx  modal.animation.ts
src/components/NumberInput/: index.tsx
src/components/Progress/: index.tsx
src/components/Select/: index.tsx
src/components/Slider/: Slider.tsx
src/components/Spinner/: index.tsx
src/components/Switch/: index.tsx
src/components/Tabs/: index.tsx
src/components/ThemeSwitcher/: index.tsx
src/components/Title/: index.tsx
src/components/Toast/: Toaster.tsx  index.tsx
src/components/Tooltip/: index.tsx
src/constants/: index.ts
src/hooks/: usePlatform.ts  useTheme.ts
src/providers/: ThemeProvider.tsx  UIProvider.tsx
src/routes/: __root.tsx
src/routes/(root)/: -state.ts  -types.ts  index.tsx
src/tauri/VideoPicker/: index.tsx
src/tauri/commands/: ffmpeg.ts  fs.ts
src/types/: compression.ts  fs.ts
src/ui/BackdropBlur/: index.tsx
src/ui/Dialogs/: AlertDialog.tsx
src/ui/Patterns/: DotPattern.tsx
src/utils/: animation.ts  fs.ts  string.ts  tailwind.ts
src/utils/tailwind/: index.ts
(+20 files in other folders)
