[package]
name = "app"
version = "1.0.0"
description = "Compress any video into a tiny size."
authors = ["you"]
license = "AGPL-3.0-only"
repository = "https://github.com/codeforreal1/compressO"
default-run = "app"
edition = "2021"
rust-version = "1.60"


[lib]
name = "lib"
path = "src/lib/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tokio = { version = "1.34.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
nanoid = "0.4.0"
infer = "0.15.0"
image = "0.25.1"
log = "0.4.21"
shared_child = "1.0.0"
regex = "1.10.4"
crossbeam-channel = "0.5.12"
strum = { version = "0.26.2", features = ["derive"] }
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-os = "2.0.0-beta.6"
wgpu = "23.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!z
custom-protocol = ["tauri/custom-protocol"]
